detection_of_pcb_prj/detection_of_pcb/Library/Include/C154.h

I16 FNTYPE c154_get_target_pos(I16 AxisNo, F64 *pos);
//General-purposed Input/Output Section 6.19
I16 FNTYPE c154_set_gpio_output(I16 CardId, I16 DoValue );
I16 FNTYPE c154_get_gpio_output(I16 CardId, I16 *DoValue );
I16 FNTYPE c154_get_gpio_input(I16 CardId, I16 *DiValue );
I16 FNTYPE c154_set_gpio_input_function(I16 CardId, I16 Channel, I16 Select, I16 Logic);
//Soft Limit 6.20
I16 FNTYPE c154_disable_soft_limit(I16 AxisNo);
I16 FNTYPE c154_enable_soft_limit(I16 AxisNo, I16 Action);
I16 FNTYPE c154_set_soft_limit(I16 AxisNo, I32 PlusLimit, I32 MinusLimit);
//Backlas Compensation / Vibration Suppression 6.21
I16 FNTYPE c154_backlash_comp(I16 AxisNo, I16 CompPulse, I16 Mode);
I16 FNTYPE c154_suppress_vibration(I16 AxisNo, U16 ReverseTime, U16 ForwardTime);
I16 FNTYPE c154_set_fa_speed(I16 AxisNo, F64 FA_Speed);