detection_of_pcb_prj/detection_of_pcb/Library/Include/C154.vb


    'General I/O Function
    Declare Function c154_set_gpio_output Lib "C154.dll" Alias "c154_set_gpio_output" (ByVal card_id As Short, ByVal do_value As Integer) As Short
    Declare Function c154_get_gpio_output Lib "C154.dll" Alias "c154_get_gpio_output" (ByVal card_id As Short, ByRef do_status As Integer) As Short
    Declare Function c154_get_gpio_input Lib "C154.dll" Alias "c154_get_gpio_input" (ByVal card_id As Short, ByRef di_status As Integer) As Short
    Declare Function c154_set_gpio_input_function Lib "C154.dll" Alias "c154_set_gpio_input_function" (ByVal card_id As Short, ByVal channel As Short, ByVal selectNo As Short, ByVal logic As Short) As Short

    'Soft Limit
    Declare Function c154_disable_soft_limit Lib "C154.dll" Alias "c154_disable_soft_limit" (ByVal AxisNo As Short) As Short
    Declare Function c154_enable_soft_limit Lib "C154.dll" Alias "c154_enable_soft_limit" (ByVal AxisNo As Short, ByVal Action As Short) As Short
    Declare Function c154_set_soft_limit Lib "C154.dll" Alias "c154_set_soft_limit" (ByVal AxisNo As Short, ByVal Plus_Limit As Integer, ByVal Neg_Limit As Integer) As Short

    'Backlas Compensation / Vibration Suppression
    Declare Function c154_backlash_comp Lib "C154.dll" Alias "c154_backlash_comp" (ByVal AxisNo As Short, ByVal CompPulse As Short, ByVal Mode As Short) As Short
    Declare Function c154_suppress_vibration Lib "C154.dll" Alias "c154_suppress_vibration" (ByVal AxisNo As Short, ByVal ReverseTime As Integer, ByVal ForwardTime As Integer) As Short
    Declare Function c154_set_fa_speed Lib "C154.dll" Alias "c154_set_fa_speed" (ByVal AxisNo As Short, ByVal FA_Speed As Double) As Short

    ' Hardware Access Function
    Declare Function c154_read_reg Lib "C154.dll" Alias "c154_read_reg" (ByVal card_id As Short, ByVal Offset As Integer, ByRef Value As Integer) As Short
    Declare Function c154_write_reg Lib "C154.dll" Alias "c154_write_reg" (ByVal card_id As Short, ByVal Offset As Integer, ByVal Value As Integer) As Short
    Declare Function c154_read_reg2 Lib "C154.dll" Alias "c154_read_reg2" (ByVal card_id As Short, ByVal Offset As Integer, ByRef Value As Integer) As Short
    Declare Function c154_write_reg2 Lib "C154.dll" Alias "c154_write_reg2" (ByVal card_id As Short, ByVal Offset As Integer, ByVal Value As Integer) As Short

    'reserve function
    Declare Function c154_get_target_pos Lib "C154.dll" Alias "i_get_target_pos" (ByVal AxisNo As Short, ByRef Value As Integer) As Short
    Declare Function c154_reset_target_pos Lib "C154.dll" Alias "i_reset_target_pos" (ByVal AxisNo As Short, ByVal Value As Integer) As Short

    Declare Function c154_get_tr_move_profile Lib "C154.dll" Alias "i_get_tr_move_profile" (ByVal AxisNo As Short, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByRef pStrVel As Double, ByRef pMaxVel As Double, ByRef pTacc As Double, ByRef pTdec As Double, ByRef pTconst As Double) As Short
    Declare Function c154_get_ta_move_profile Lib "C154.dll" Alias "i_get_ta_move_profile" (ByVal AxisNo As Short, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByRef pStrVel As Double, ByRef pMaxVel As Double, ByRef pTacc As Double, ByRef pTdec As Double, ByRef pTconst As Double) As Short
    Declare Function c154_get_sr_move_profile Lib "C154.dll" Alias "i_get_sr_move_profile" (ByVal AxisNo As Short, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double, ByRef pStrVel As Double, ByRef pMaxVel As Double, ByRef pTacc As Double, ByRef pTdec As Double, ByRef pSVacc As Double, ByRef pSVdec As Double, ByRef pTconst As Double) As Short
    Declare Function c154_get_sa_move_profile Lib "C154.dll" Alias "i_get_sa_move_profile" (ByVal AxisNo As Short, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double, ByRef pStrVel As Double, ByRef pMaxVel As Double, ByRef pTacc As Double, ByRef pTdec As Double, ByRef pSVacc As Double, ByRef pSVdec As Double, ByRef pTconst As Double) As Short



End Module
'''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

Public Structure sAxisArray154
    Dim AxisArray1 As Short
    Dim AxisArray2 As Short
    Dim AxisArray3 As Short
    Dim AxisArray4 As Short
End Structure

Public Structure sDistA154
    Dim DistA1 As Double
    Dim DistA2 As Double
    Dim DistA3 As Double
    Dim DistA4 As Double
End Structure

Public Structure sStrVelA154
    Dim StrVelA1 As Double
    Dim StrVelA2 As Double
    Dim StrVelA3 As Double
    Dim StrVelA4 As Double
End Structure

Public Structure sMaxVelA154
    Dim MaxVelA1 As Double
    Dim MaxVelA2 As Double
    Dim MaxVelA3 As Double
    Dim MaxVelA4 As Double
End Structure

Public Structure sTaccA154
    Dim TaccA1 As Double
    Dim TaccA2 As Double
    Dim TaccA3 As Double
    Dim TaccA4 As Double
End Structure

Public Structure sTdecA154
    Dim TdecA1 As Double
    Dim TdecA2 As Double
    Dim TdecA3 As Double
    Dim TdecA4 As Double
End Structure

Public Structure sPosA154
    Dim PosA1 As Double
    Dim PosA2 As Double
    Dim PosA3 As Double
    Dim PosA4 As Double
End Structure

Public Structure sSVaccA154
    Dim SVaccA1 As Double
    Dim SVaccA2 As Double
    Dim SVaccA3 As Double
    Dim SVaccA4 As Double
End Structure

Public Structure sSVdecA154
    Dim SVdecA1 As Double
    Dim SVdecA2 As Double
    Dim SVdecA3 As Double
    Dim SVdecA4 As Double
End Structure

Public Structure sArcCenter
    Dim ArcCenterX As Double
    Dim ArcCenterY As Double
End Structure

Public Structure sArcEnd
    Dim ArcEndX As Double
    Dim ArcEndY As Double
End Structure

Public Structure sArcOffsetCenter
    Dim ArcCenterX As Double
    Dim ArcCenterY As Double
End Structure

Public Structure sArcOffsetEnd
    Dim ArcEndX As Double
    Dim ArcEndY As Double
End Structure

